@@ -7,7 +7,7 @@
 window.ms_init.view_member_editor = function init () {
 	var txt_username = jQuery( '#username' ),
 		txt_email = jQuery( '#email' ),
-		sel_user = jQuery( '#select_user' ),
+		sel_user = jQuery( '.ms-group-select #user_id' ),
 		btn_add = jQuery( '#btn_create' ),
 		btn_select = jQuery( '#btn_select' ),
 		chosen_options = {};
