@@ -78,29 +78,32 @@ class MS_View_Member_Editor extends MS_View {
 				'type' => MS_Helper_Html::INPUT_TYPE_TEXT,
 				'title' => __( 'User name', MS_TEXT_DOMAIN ) . ' *',
 				'after' => ' ',
-				'class' => 'required',
+				'class' => 'required ms-text-medium',
 			),
 			'email' => array(
 				'id' => 'email',
 				'type' => MS_Helper_Html::INPUT_TYPE_EMAIL,
 				'title' => __( 'Email address', MS_TEXT_DOMAIN ) . ' *',
 				'after' => ' ',
-				'class' => 'required',
+				'class' => 'required ms-text-medium',
 			),
 			'first_name' => array(
 				'id' => 'first_name',
 				'type' => MS_Helper_Html::INPUT_TYPE_TEXT,
 				'title' => __( 'First name', MS_TEXT_DOMAIN ),
+				'class' => 'ms-text-medium',
 			),
 			'last_name' => array(
 				'id' => 'last_name',
 				'type' => MS_Helper_Html::INPUT_TYPE_TEXT,
 				'title' => __( 'Last name', MS_TEXT_DOMAIN ),
+				'class' => 'ms-text-medium',
 			),
 			'password' => array(
 				'id' => 'password',
 				'type' => MS_Helper_Html::INPUT_TYPE_PASSWORD,
 				'title' => __( 'Password', MS_TEXT_DOMAIN ),
+				'class' => 'ms-text-medium',
 			),
 			'info' => array(
 				'type' => MS_Helper_Html::TYPE_HTML_TEXT,
@@ -134,7 +137,7 @@ class MS_View_Member_Editor extends MS_View {
 				'value' => __( 'Select an existing WordPress user', MS_TEXT_DOMAIN ),
 			),
 			'select_user' => array(
-				'id' => 'select_user',
+				'id' => 'user_id',
 				'type' => MS_Helper_Html::INPUT_TYPE_HIDDEN,
 				'title' => __( 'Existing WordPress users', MS_TEXT_DOMAIN ),
 				'class' => 'manual-init no-auto-init widefat',
@@ -172,20 +175,168 @@ class MS_View_Member_Editor extends MS_View {
 	 * @return array
 	 */
 	public function prepare_fields_edit() {
+		$action_update = MS_Controller_Member::ACTION_UPDATE_MEMBER;
+		$action_subscribe = MS_Controller_Member::ACTION_SUBSCRIBE_MEMBER;
+
 		$user_id = $this->data['user_id'];
+		$user = MS_Factory::load( 'MS_Model_Member', $user_id );
+		$unused_memberships = MS_Model_Membership::get_memberships(
+			array( 'include_guest' => 0 )
+		);
 
 		$fields = array();
 		$fields['editor'] = array(
-			'name' => array(
-				'id' => 'name',
+			'title' => array(
+				'type' => MS_Helper_Html::TYPE_HTML_TEXT,
+				'class' => 'group-title',
+				'value' => __( 'Basic Profile details', MS_TEXT_DOMAIN ),
+			),
+			'username' => array(
+				'id' => 'username',
 				'type' => MS_Helper_Html::INPUT_TYPE_TEXT,
-				'title' => __( 'Name Your Membership:', MS_TEXT_DOMAIN ),
-				'value' => $membership->name,
-				'class' => 'ms-text-large',
-				'placeholder' => __( 'Choose a name that will identify this membership...', MS_TEXT_DOMAIN ),
-				'label_type' => 'h3',
+				'title' => __( 'Username', MS_TEXT_DOMAIN ),
+				'value' => $user->username,
+				'class' => 'ms-text-medium',
+				'config' => array(
+					'disabled' => 'disabled',
+				),
+			),
+			'email' => array(
+				'id' => 'email',
+				'type' => MS_Helper_Html::INPUT_TYPE_TEXT,
+				'title' => __( 'Email', MS_TEXT_DOMAIN ),
+				'value' => $user->email,
+				'class' => 'ms-text-medium',
+			),
+			'first_name' => array(
+				'id' => 'first_name',
+				'type' => MS_Helper_Html::INPUT_TYPE_TEXT,
+				'title' => __( 'First Name', MS_TEXT_DOMAIN ),
+				'value' => $user->first_name,
+				'class' => 'ms-text-medium',
+			),
+			'last_name' => array(
+				'id' => 'last_name',
+				'type' => MS_Helper_Html::INPUT_TYPE_TEXT,
+				'title' => __( 'Last Name', MS_TEXT_DOMAIN ),
+				'value' => $user->last_name,
+				'class' => 'ms-text-medium',
+			),
+			'displayname' => array(
+				'id' => 'displayname',
+				'type' => MS_Helper_Html::INPUT_TYPE_TEXT,
+				'title' => __( 'Display Name', MS_TEXT_DOMAIN ),
+				'value' => $user->get_user()->display_name,
+				'class' => 'ms-text-medium',
+			),
+			'sep' => array(
+				'type' => MS_Helper_Html::TYPE_HTML_SEPARATOR,
+			),
+			'user_id' => array(
+				'id' => 'user_id',
+				'type' => MS_Helper_Html::INPUT_TYPE_HIDDEN,
+				'value' => $user->id,
+			),
+			'button' => array(
+				'id' => 'btn_save',
+				'type' => MS_Helper_Html::INPUT_TYPE_SUBMIT,
+				'value' => __( 'Save', MS_TEXT_DOMAIN ),
+			),
+			'profile' => array(
+				'id' => 'user_profile',
+				'type' => MS_Helper_Html::TYPE_HTML_LINK,
+				'value' => __( 'Full User Profile', MS_TEXT_DOMAIN ) . ' &raquo;',
+				'url' => admin_url( 'user-edit.php?user_id=' . $user->id ),
+				'class' => 'button wpmui-field-input',
+			),
+			'action' => array(
+				'id' => 'action',
+				'type' => MS_Helper_Html::INPUT_TYPE_HIDDEN,
+				'value' => $action_update,
+			),
+			'_wpnonce' => array(
+				'id' => '_wpnonce',
+				'type' => MS_Helper_Html::INPUT_TYPE_HIDDEN,
+				'value' => wp_create_nonce( $action_update ),
 			),
 		);
+
+		$fields['subscriptions'] = array();
+
+		// Section: Edit existing subscriptions.
+		$fields['subscriptions'][] = array(
+			'type' => MS_Helper_Html::TYPE_HTML_TEXT,
+			'class' => 'group-title',
+			'value' => __( 'Manage Subscriptions', MS_TEXT_DOMAIN ),
+		);
+		if ( $user->subscriptions ) {
+			foreach ( $user->subscriptions as $subscription ) {
+				$the_membership = $subscription->get_membership();
+				unset( $unused_memberships[$the_membership->id] );
+
+				$fields['subscriptions'][] = array(
+					'type' => MS_Helper_Html::TYPE_HTML_TEXT,
+					'value' => $the_membership->get_name_tag(),
+				);
+			}
+		} else {
+			$fields['subscriptions'][] = array(
+				'type' => MS_Helper_Html::TYPE_HTML_TEXT,
+				'value' => __( 'This user does not have any subscriptions yet.', MS_TEXT_DOMAIN ),
+			);
+		}
+
+		// Section: Add new subscription.
+		if ( count( $unused_memberships ) ) {
+			$options = array();
+
+			if ( MS_Model_Addon::is_enabled( MS_Model_Addon::ADDON_MULTI_MEMBERSHIPS ) ) {
+				$field_type = MS_Helper_Html::INPUT_TYPE_CHECKBOX;
+				$group_title = __( 'Add Subscriptions', MS_TEXT_DOMAIN );
+				$button_label = __( 'Add Subscriptions', MS_TEXT_DOMAIN );
+			} else {
+				$field_type = MS_Helper_Html::INPUT_TYPE_RADIO;
+				$group_title = __( 'Set Subscription', MS_TEXT_DOMAIN );
+				$button_label = __( 'Set Subscription', MS_TEXT_DOMAIN );
+			}
+
+			$fields['subscriptions'][] = array(
+				'type' => MS_Helper_Html::TYPE_HTML_SEPARATOR,
+			);
+			$fields['subscriptions'][] = array(
+				'type' => MS_Helper_Html::TYPE_HTML_TEXT,
+				'class' => 'group-title',
+				'value' => $group_title,
+			);
+			foreach ( $unused_memberships as $the_membership ) {
+				$options[$the_membership->id] = $the_membership->get_name_tag();
+			}
+			$fields['subscriptions'][] = array(
+				'id' => 'subscribe',
+				'type' => $field_type,
+				'field_options' => $options,
+			);
+			$fields['subscriptions'][] = array(
+				'id' => 'user_id',
+				'type' => MS_Helper_Html::INPUT_TYPE_HIDDEN,
+				'value' => $user->id,
+			);
+			$fields['subscriptions'][] = array(
+				'id' => 'btn_subscribe',
+				'type' => MS_Helper_Html::INPUT_TYPE_SUBMIT,
+				'value' => $button_label,
+			);
+			$fields['subscriptions'][] = array(
+				'id' => 'action',
+				'type' => MS_Helper_Html::INPUT_TYPE_HIDDEN,
+				'value' => $action_subscribe,
+			);
+			$fields['subscriptions'][] = array(
+				'id' => '_wpnonce',
+				'type' => MS_Helper_Html::INPUT_TYPE_HIDDEN,
+				'value' => wp_create_nonce( $action_subscribe ),
+			);
+		}
 
 		return apply_filters(
 			'ms_view_member_editor_fields_edit',
