@@ -8,6 +8,7 @@ Change Log:
 ----------------------------------------------------------------------
 - Add gateway: 2Checkout
 - Add new Add-on for WPML integration
+- Add a new Add/Edit Member page where subscription details can be modified
 - Add an admin notice when no payment gateway is active but paid memberships exist
 - Add bulk actions to the Members admin page
 - Improve payment logs to display additional information for errors
